eliminé archivos en desuso, limpie los imports de cada componente, añadí nuevos pipe, error component, y modales.

--- a/frontend/agendapp/src/app/components/bienvenida/bienvenida.component.css
+++ b/frontend/agendapp/src/app/components/bienvenida/bienvenida.component.css
@@ -19,11 +19,9 @@
   align-items: center;
 }
 
-/* img{
-    width: inherit;
-    position: absolute;
-    z-index: -100;
-} */
+.bt-register{
+  border-color: #0d5dd3;
+}
 
 .boton-container {
   position: absolute;
