--- a/frontend/agendapp/src/app/components/bienvenida/bienvenida.component.html
+++ b/frontend/agendapp/src/app/components/bienvenida/bienvenida.component.html
@@ -2,7 +2,7 @@
   <div class="container boton-container m-0 p-0">
     <div class="container botones">
       <button
-        class="btn btn-outline-primary bg-primary text-dark btn-lg rounded-pill mb-3 px-5"
+        class="btn bt-register bg-primary text-light btn-lg rounded-pill mb-3 px-5"
         type="button"
         title="Registrame"
         [routerLink]="['/registro_usuarios']"
