--- a/frontend/agendapp/src/app/components/registro/registro.component.html
+++ b/frontend/agendapp/src/app/components/registro/registro.component.html
@@ -1,6 +1,8 @@
 @if(vistaHeader){
 <app-navbar></app-navbar>
-} @if(section === 'registro_usuarios'){
+}
+
+@if(section === 'registro_usuarios'){
 <div
   class="container d-flex flex-column justify-content-center align-items-center mt-2"
 >
@@ -62,16 +64,31 @@
             [(ngModel)]="user.dni"
           />
         </div>
-        <div class="wrapper mb-2">
+       <div class="wrapper mb-2 d-flex flex-row">
           <input
-            minlength="5"
-            maxlength="100"
-            class="form-control"
-            type="password"
+            class="form-control input"
+            [type]="isPasswordVisible ? 'text' : 'password'"
             name="password"
             placeholder="Contraseña"
+            maxlength="100"
+            minlength="4"
+             placeholder="Contraseña"
             [(ngModel)]="user.password"
           />
+          <span (click)="togglePasswordVisibility()" class="span">
+            <span class="pe-1">
+              <img
+                [hidden]="isPasswordVisible"
+                src="../../../assets/img/eye-password-show.svg"
+                alt="icono-mostrar-password"
+              />
+              <img
+                [hidden]="!isPasswordVisible"
+                src="../../../assets/img/eye-password-hide.svg"
+                alt="icono-ocultar-password"
+              />
+            </span>
+          </span>
         </div>
         <div
           class="container d-flex flex-column justify-content-center align-items-center"
@@ -161,16 +178,31 @@
             [(ngModel)]="medico.dni"
           />
         </div>
-        <div class="wrapper mb-2">
+       <div class="wrapper mb-2 d-flex flex-row">
           <input
-            minlength="5"
-            maxlength="100"
-            class="form-control"
-            type="password"
+            class="form-control input"
+            [type]="isPasswordVisible ? 'text' : 'password'"
             name="password"
             placeholder="Contraseña"
-            [(ngModel)]="medico.password"
+            maxlength="100"
+            minlength="4"
+             placeholder="Contraseña"
+             [(ngModel)]="medico.password"
           />
+          <span (click)="togglePasswordVisibility()" class="span">
+            <span class="pe-1">
+              <img
+                [hidden]="isPasswordVisible"
+                src="../../../assets/img/eye-password-show.svg"
+                alt="icono-mostrar-password"
+              />
+              <img
+                [hidden]="!isPasswordVisible"
+                src="../../../assets/img/eye-password-hide.svg"
+                alt="icono-ocultar-password"
+              />
+            </span>
+          </span>
         </div>
         <div class="wrapper mb-2">
           <select
@@ -196,7 +228,7 @@
             class="form-select"
             aria-label="Elija su horario"
             name="idHorario"
-            [(ngModel)]="medico.idHorario"
+            [(ngModel)]="medico.idHorario"            
           >
             @for(hora of horarios; track hora.idHorario){
             <option
