--- a/frontend/agendapp/src/app/shared/navbarusuariologueado/navbarusuariologueado.component.html
+++ b/frontend/agendapp/src/app/shared/navbarusuariologueado/navbarusuariologueado.component.html
@@ -2,6 +2,7 @@
   class="navbar d-flex justify-content-start align-items-center"
 >
   <div class="container-fluid">
+   @if(usuario && usuario.idRol == 1){
     <a [routerLink]="['/home_usuario']">
       <span>
         <img
@@ -11,6 +12,27 @@
         />
       </span>
     </a>
+ } @else if(usuario && usuario.idRol == 2){
+    <a [routerLink]="['/home_medico']">
+      <span>
+        <img
+          src="../../../assets/img/logo.png"
+          alt="logo_empresa"
+          class="logo"
+        />
+      </span>
+    </a>
+  } @else if(usuario && usuario.idRol == 3){
+    <a [routerLink]="['/admin']">
+      <span>
+        <img
+          src="../../../assets/img/logo.png"
+          alt="logo_empresa"
+          class="logo"
+        />
+      </span>
+    </a>
+  }
    <div class="d-flex flex-row justify-content-end align-items-center">
       @if(usuario){
       <p class="nombreUsuario p-0 m-0">{{ usuario.nombre}} {{usuario.apellido}}</p>
@@ -32,7 +54,7 @@
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav align-items-end me-4">
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/']">Salir</a>
+          <a class="nav-link" (click)="logout()">Salir</a>
         </li>
       </ul>
     </div>
