--- a/frontend/agendapp/src/app/components/buscar-usuarios/buscar-usuarios.component.html
+++ b/frontend/agendapp/src/app/components/buscar-usuarios/buscar-usuarios.component.html
@@ -1,5 +1,8 @@
 <!-- Modal Editar Usuario -->
- <app-modal-editarusuario (usuarioEditado)="usuarioEditadoHandler($event)"></app-modal-editarusuario>
+<app-modal-editarusuario
+  (usuarioEditado)="usuarioEditadoHandler($event)"
+  [datoEntrada]="datos"
+></app-modal-editarusuario>
 
 <section id="nav_medico">
   <!-- Header de usuario -->
@@ -9,12 +12,9 @@
 <!-- Main -->
 <div class="main">
   <section id="fraseBienvenida">
-    @if (section === 'buscar_usuarios') {
     <div class="container fraseBienvenida">
-      <!-- TODO: modificar por el objeto usuario id -->
       <h2>Buscar Usuarios</h2>
     </div>
-    }
   </section>
 
   <!-- Busqueda / Filtro -->
@@ -57,11 +57,12 @@
 
   <hr class="bg-transparent" />
 
-  <table class="table table-sm mx-auto">
+  <table class="table table-hover table-sm mx-auto">
     <thead>
       <tr class="col">
-        <th style="width: 2rem; padding-left: 1rem;">Roles</th>
-        <th style="width: 6rem">ID</th>
+        <th style="width: 2rem; padding-left: 1rem">Roles</th>
+        <th style="width: 6rem">ID usuario</th>
+        <th style="width: 6rem">ID medico</th>
         <th style="width: 15rem">Nombre y Apellido</th>
         <th style="width: 9rem">DNI</th>
         <th style="width: 10rem">Email</th>
@@ -73,13 +74,22 @@
       <tr class="align-self-center">
         <td>{{ user.idRol }}</td>
         <td>{{ user.idUsuario }}</td>
+        @if(medico?.idMedico) {
+        <td>{{medico.idMedico}}</td>
+        }@else {
+        <td> - </td>
+        }
         <td>{{ user.nombre }}&ensp;{{ user.apellido }}</td>
         <td>{{ user.dni }}</td>
         <td>{{ user.email }}</td>
         <td>
           <span class="icono-editar">
-              <img src="../../../assets/img/eye-password-show.svg" alt="icono-editar" (click)="abrirModalEditarUsuario()" />
-            </span>
+            <img
+              src="../../../assets/img/edit.svg"
+              alt="icono-editar"
+              (click)="verUsuario(user.idUsuario)"
+            />
+          </span>          
         </td>
       </tr>
       }
