--- a/frontend/agendapp/src/app/components/configuraciones/settings.component.html
+++ b/frontend/agendapp/src/app/components/configuraciones/settings.component.html
@@ -24,7 +24,7 @@
     class="container-fluid d-flex flex-column justify-content-center align-items-center mt-2 p-4"
   >
     <!-- ABM Horarios -->
-    <div class="d-flex flex-row justify-content-around w-100">
+    <div class="d-flex flex-row justify-content-around w-100 py-3">
       <h4>Horarios</h4>
       <span
         type="button"
@@ -37,14 +37,14 @@
     <table class="table table-sm table-hover">
       <thead>
         <tr class="col">
-          <th>ID</th>
+          <th>ID Horario</th>
           <th>Rango</th>
           <th style="width: 9rem">Acciones</th>
         </tr>
       </thead>
       <tbody>
         @for(hora of horarios; track hora.idHorario){
-        <tr (click)="verPorSuId(hora.idHorario)">
+        <tr>
           <td>{{ hora.idHorario }}</td>
           @if(!hora.isEditable){
           <td>{{ hora.rango }}</td>
@@ -62,23 +62,22 @@
           }
 
           <td>
-            <span class="icono-editar" (click)="editar(hora.idHorario, hora)">
+            <span
+              class="icono-editar"
+              (click)="editarHorario(hora.idHorario, hora)"
+            >
               <img src="../../../assets/img/edit.svg" alt="icono-editar" />
             </span>
-            <span class="icono-guardar" (click)="guardarHorario(hora)">
+            <span
+              class="icono-guardar"
+              (click)="guardarHorario(hora.idHorario, hora)"
+            >
               <img src="../../../assets/img/save.svg" alt="icono-guardar" />
             </span>
             <span class="icono-cancelar" (click)="cancelar(hora)">
               <img src="../../../assets/img/cancel.svg" alt="icono-cancelar" />
             </span>
-            <span class="icono-eliminar">
-              <img
-                src="../../../assets/img/trash.svg"
-                alt="icono-eliminar"
-                (click)="eliminar(hora.idHorario)"
-              />
-            </span>
-          </td>
+           </td>
         </tr>
         }
       </tbody>
@@ -87,7 +86,7 @@
     <hr />
 
     <!-- ABM Especialidades -->
-    <div class="d-flex flex-row justify-content-around w-100">
+    <div class="d-flex flex-row justify-content-around w-100 py-3">
       <h4>Especialidades</h4>
       <span
         type="button"
@@ -97,18 +96,18 @@
         >Agregar +</span
       >
     </div>
-    <table class="table table-sm table-hover">
+    <table class="table table-hover table-sm">
       <thead>
         <tr class="col">
-          <th>ID</th>
+          <th>ID Categoria</th>
           <th>Nombre</th>
           <th>Logo</th>
-          <th>Acciones</th>
+          <th style="width: 9rem;">Acciones</th>
         </tr>
       </thead>
       <tbody>
         @for(esp of especialidades; track esp.idCategoria){
-        <tr (click)="verPorSuId(esp.idCategoria)">
+        <tr>
           <td>{{ esp.idCategoria }}</td>
           @if(!esp.isEditable){
           <td>{{ esp.nombre }}</td>
@@ -123,28 +122,26 @@
               id="categoria"
             />
           </td>
-          }
-          @if(esp.imgSrc){
+          } @if(esp.imgSrc){
           <td>{{ esp.imgSrc }}</td>
           }@else {
           <td>Sin logo</td>
           }
           <td>
-            <span class="icono-editar" (click)="editar(esp.idCategoria, esp)">
+            <span
+              class="icono-editar"
+              (click)="editarCategoria(esp.idCategoria, esp)"
+            >
               <img src="../../../assets/img/edit.svg" alt="icono-editar" />
             </span>
-            <span class="icono-guardar" (click)="guardarCategoria(esp)">
+            <span
+              class="icono-guardar"
+              (click)="guardarCategoria(esp.idCategoria, esp)"
+            >
               <img src="../../../assets/img/save.svg" alt="icono-guardar" />
             </span>
             <span class="icono-cancelar" (click)="cancelar(esp)">
               <img src="../../../assets/img/cancel.svg" alt="icono-cancelar" />
-            </span>
-            <span class="icono-eliminar">
-              <img
-                src="../../../assets/img/trash.svg"
-                alt="icono-eliminar"
-                (click)="eliminar(esp.idCategoria)"
-              />
             </span>
           </td>
         </tr>
@@ -155,19 +152,13 @@
     <hr />
 
     <!-- ABM Citas -->
-    <div class="d-flex flex-row justify-content-around w-100">
-      <h4>Citas</h4>
-      <span
-        type="button"
-        class="badge rounded-pill text-bg-success"
-        title="Agregar +"
-        >Agregar +</span
-      >
+    <div class="d-flex flex-row justify-content-evenly w-100 py-3">     
+      <h4>Citas</h4>   
     </div>
     <table class="table table-sm table-hover">
       <thead>
         <tr class="col">
-          <th>ID</th>
+          <th>ID Cita</th>
           <th>Fecha</th>
           <th>Hora</th>
           <th>ID Paciente</th>
@@ -178,29 +169,22 @@
       </thead>
       <tbody>
         @for(cita of citas; track cita.idCita){
-        <tr (click)="verPorSuId(cita.idCita)">
+        <tr>
           <td>{{ cita.idCita }}</td>
           <td>{{ cita.fecha | date : "dd/MM/yy" }}</td>
           <td>{{ cita.hora }}</td>
           <td>{{ cita.idPaciente }}</td>
           <td>{{ cita.idMedico }}</td>
           <td>{{ cita.motivoConsulta }}</td>
-          <!-- <td style="width: 6rem">
+          <td>
             <span class="icono-editar">
               <img
-                src="../../../assets/img/edit.svg"
-                alt="icono-editar"
-                (click)="editar(cita.idCita)"
+                src="../../../assets/img/eye-password-show.svg"
+                alt="icono-ver"
+                (click)="verCitaDetalle(cita.idCita)"
               />
             </span>
-            <span class="icono-eliminar">
-              <img
-                src="../../../assets/img/trash.svg"
-                alt="icono-eliminar"
-                (click)="eliminar(cita.idCita)"
-              />
-            </span>
-          </td> -->
+          </td>
         </tr>
         }
       </tbody>
