--- a/frontend/agendapp/src/app/components/modulo-usuario/modulo-usuario.component.html
+++ b/frontend/agendapp/src/app/components/modulo-usuario/modulo-usuario.component.html
@@ -6,15 +6,12 @@
 <!-- Main -->
 <div class="main">
   <section id="fraseBienvenida">
-    @if (section === 'home_usuario') {
     <div class="container fraseBienvenida">
-      <!-- TODO: modificar por el objeto usuario id -->
       @if(usuario){
       <h2>Hola, {{ usuario.nombre }}!</h2>
       }
       <p>Agendá tu consulta virtual!</p>
     </div>
-    }
   </section>
 
   <!-- Slider publicitario -->
@@ -56,7 +53,7 @@
   <section id="btn-calltoaction">
     <div class="container py-3 mt-1">
       <div
-        class="d-flex flex-row justify-content-evenly align-items-center gap-2"
+        class="d-flex flex-row justify-content-around align-items-center"
       >
         <a
           class="btn btn-primary btn-lg text-wrap cta"
@@ -76,8 +73,11 @@
 
   <!-- Carousel Especialidades -->
   <section id="carousel-especialidades">
-    <div class="container titulos">
-      <h2 class="my-3">Especialidades</h2>
+    <div class="container container-cards">
+      <div class="container d-flex flex-row justify-content-between align-items-center mx-2">
+        <h2 class="my-3 titulos">Especialidades</h2>
+        <a class="routerlink" [routerLink]="['/especialidades']">Ver más</a>
+      </div>
       <div class="container-button-group">
         @for(especialidad of limitEspecialidades(); track
         especialidad.idCategoria){
@@ -103,8 +103,11 @@
 
   <!-- Agenda de Turnos -->
   <section id="card-turnos">
-    <div class="container titulos">
-      <h2 class="my-3">Agenda de turnos</h2>
+    <div class="container container-cards">
+      <div class="container d-flex flex-row justify-content-between align-items-center mx-2"> 
+        <h2 class="my-3 titulos">Agenda de turnos</h2>
+        <a class="routerlink" [routerLink]="['/mis_turnos']">Ver más</a>
+      </div>
       @switch (citas.length === 0){ @case (true) {
       <div class="card mb-3 card-vacia">
         <div
@@ -113,25 +116,30 @@
           <span>No tienes turnos</span>
         </div>
       </div>
-      } @default{ @for(cita of citas; track cita.idCita){
-      <div class="card mb-3" (click)="verTurnoDetalle(cita.idCita)">
+      } @default{ @for(cita of limitCitasVistas(); track cita.idCita){
+      <div class="card mb-3" [routerLink]="['/turno/', cita.idCita]">
         <div class="row g-0">
-          <div class="col-3 d-flex justify-content-center align-items-center">
+          <div class="col-2 d-flex justify-content-center align-items-center">
             <img
               src="../../../assets/img/logo.png"
               class="img-fluid rounded-start doctor"
               alt="imagen_doctor"
             />
           </div>
-          <div class="col-8">
+          <div class="col-9">
             <div
               class="card-body p-2 m-0 d-flex flex-column justify-content-center align-items-center"
             >
               <!-- Nombre completo y especialidad -->
-              <h6 class="card-title">{{ "Especialidad" }}</h6>
-              <h5>Dr. {{ "Nombre" }}{{ "Apellido" }}</h5>
+              <h6 class="card-title">
+                {{ cita.medico?.categoria | categoriaNombre }}
+              </h6>
+              <h5>
+                Dr.{{ cita.medico?.nombre }}&ensp;
+                {{ cita.medico?.apellido }}
+              </h5>
               <small>
-                {{ cita.fecha | date : "dd/MM/yy" }} - {{ cita.hora }}
+                {{ cita.fecha | date : "dd/MM/yy" }} - {{ cita.hora }}&ensp;Hs.
               </small>
               <small>
                 {{ cita.motivoConsulta }}
