--- a/frontend/agendapp/src/app/components/registro/registro.component.css
+++ b/frontend/agendapp/src/app/components/registro/registro.component.css
@@ -26,3 +26,19 @@ a {
 .option-menu {
   font-size: 1em;
 }
+
+input.input {
+  padding: 9px;
+  margin-right: -35px;
+}
+
+.span {
+  z-index: 999;
+}
+
+img[alt="icono-ocultar-password"],
+[alt="icono-mostrar-password"] {
+  cursor: pointer;
+  width: 24px;
+  padding-top: 0.5rem;
+}
