--- a/frontend/agendapp/src/app/components/turno/turno.component.html
+++ b/frontend/agendapp/src/app/components/turno/turno.component.html
@@ -14,7 +14,6 @@
 </section>
 
 <div class="main">
-  <!-- datepicker -->
 
   <form class="form" #form="ngForm" (ngSubmit)="crearTurno(form)">
     <div class="card bg-transparent">
@@ -33,6 +32,7 @@
           [min]="fecha"
           [max]="fechaTope"
           ngModel
+          required
         />
       </div>
       <!-- input select con horarios disponibles de el medico seleccionado -->
@@ -43,39 +43,23 @@
         <select
           class="form-select"
           aria-label="Seleccione un rango de horario"
-          name="idHorario"
+          name="rango"
           [(ngModel)]="turno.hora"
-          (change)="onChangeHorario($event)"
+          required
         >
-          <option value="" id="id_auxiliar" type="hidden" readonly>Elija un rango</option>
           @for(hora of horarios; track hora.idHorario){
           <option
             class="option-menu"
             [id]="hora.idHorario"
-            [ngValue]="hora.idHorario"
+            [value]="hora.rango"
           >
             {{ hora.rango }}
           </option>
+          }@empty {
+          <option class="option-menu">No hay horarios disponibles</option>
           }
         </select>
-      </div>
-      <!-- input select con los horarios segun rango seleccionado -->
-      <div class="wrapper mb-2">
-        <label for="horaCita"><small>Elija un horario</small></label>
-        <select
-          class="form-select"
-          aria-label="Elija un horario"
-          name="horaCita"
-          [(ngModel)]="turno.horaCita"
-        >
-          <!-- (click)="verDato(turno.horaCita)" -->
-          @if(rangoHoras.length > 0){ @for(hora of rangoHoras; track $index){
-          <option class="option-menu" selected [id]="$index" [ngValue]="hora">
-            {{ hora }}:00
-          </option>
-          } }
-        </select>
-      </div>
+      </div>     
       <!-- input motivo de la consulta -->
       <div class="wrapper mb-2">
         <label for="horaCita"
@@ -89,6 +73,7 @@
           name="motivo"
           id="motivo"
           [(ngModel)]="turno.motivoConsulta"
+          required
         >
         </textarea>
       </div>
@@ -96,6 +81,7 @@
         class="btn btn-primary btn-lg rounded-pill my-3 px-5"
         type="submit"
         value="Confirmar turno"
+        [disabled]="form.invalid"
       />
     </div>
   </form>
