--- a/frontend/agendapp/src/app/components/turnodetalle/turnodetalle.component.html
+++ b/frontend/agendapp/src/app/components/turnodetalle/turnodetalle.component.html
@@ -37,11 +37,15 @@
         </div>
         <div class="wrapper">
           <p class="card-text fw-bold me-2">Especialista:</p>
+          @if(usuarioMedico){
           <p>
             {{ usuarioMedico?.nombre | titlecase }}&ensp;{{
               usuarioMedico?.apellido | titlecase
             }}
           </p>
+        }@else {
+          <p>{{ 'No existe el medico asociado' }}</p>
+          }
         </div>
         <div class="wrapper">
           <p class="card-text fw-bold me-2">Fecha:</p>
@@ -49,25 +53,14 @@
         </div>
         <div class="wrapper">
           <p class="card-text fw-bold me-2">Rango de Horario:</p>
-          <p>{{ rangoHoraId }}</p>
-        </div>
-        <div class="wrapper">
-          <p class="card-text fw-bold me-2">Hora Seleccionada:</p>
-          <p>{{ turno.horaCita }}:00</p>
+          <p>{{ turno.hora }}</p>
         </div>
         <div
           class="d-flex flex-row text-wrap justify-content-start align-items-start"
         >
           <p class="card-text fw-bold me-2">Motivo de consulta:</p>
           <p>{{ turno.motivoConsulta }}</p>
-        </div>
-        <!-- <div class="wrapper">
-        @if(turno?.descripcion){
-        <p class="card-text fw-bold me-2">Descripcion:</p>
-        }@else{
-        <p></p>     
-        }
-      </div>          -->
+        </div>    
       </div>
     </div>
     }
@@ -82,44 +75,5 @@
 
 <!-- Footer generico -->
 <section id="nav-footer">
-  <nav class="navbar d-flex flex-row justify-content-around py-3 fixed-bottom">
-    <ul class="d-flex flex-row justify-content-around align-items-center">
-      <li>
-        <a [routerLink]="['/home_usuario']" class="border">
-          <img
-            src="../../../assets/img/home.svg"
-            alt=""
-            class="border m-0 p-0"
-          />
-        </a>
-      </li>
-      <li>
-        <a [routerLink]="['/mis_turnos']" class="border">
-          <img
-            src="../../../assets/img/calendar.svg"
-            alt=""
-            class="border m-0 p-0"
-          />
-        </a>
-      </li>
-      <li>
-        <a [routerLink]="['/especialidades']" class="border">
-          <img
-            src="../../../assets/img/specialties.svg"
-            alt=""
-            class="border m-0 p-0"
-          />
-        </a>
-      </li>
-      <li>
-        <a [routerLink]="['/']" class="border">
-          <img
-            src="../../../assets/img/logout.svg"
-            alt="icono_salir"
-            title="Salir"
-          />
-        </a>
-      </li>
-    </ul>
-  </nav>
+  <app-footer class="fixed-bottom"></app-footer>
 </section>
