--- a/frontend/agendapp/src/app/components/videollamada/videollamada.component.html
+++ b/frontend/agendapp/src/app/components/videollamada/videollamada.component.html
@@ -44,7 +44,7 @@
     </div>
   </div>
   <div class="video2">
-    <video autoplay muted #video2>
+    <video muted #video2>
       <source
         src="../../../assets/videos/femaledoctor2.webm"
         type="video/mp4"
@@ -53,6 +53,7 @@
     </video>
   </div>
 </section>
+
 
 <!-- Footer -->
 <section>
