--- a/frontend/agendapp/src/app/components/modulo-usuario/modulo-usuario.component.html
+++ b/frontend/agendapp/src/app/components/modulo-usuario/modulo-usuario.component.html
@@ -53,7 +53,7 @@
   <section id="btn-calltoaction">
     <div class="container py-3 mt-1">
       <div
-        class="d-flex flex-row justify-content-around align-items-center"
+        class="d-flex flex-row justify-content-around align-items-center gap-2"
       >
         <a
           class="btn btn-primary btn-lg text-wrap cta"
@@ -73,7 +73,7 @@
 
   <!-- Carousel Especialidades -->
   <section id="carousel-especialidades">
-    <div class="container container-cards">
+    <div class="container container-cards gap-2">
       <div class="container d-flex flex-row justify-content-between align-items-center mx-2">
         <h2 class="my-3 titulos">Especialidades</h2>
         <a class="routerlink" [routerLink]="['/especialidades']">Ver más</a>
