--- a/frontend/agendapp/src/app/components/turno/turno.component.html
+++ b/frontend/agendapp/src/app/components/turno/turno.component.html
@@ -2,7 +2,7 @@
   <!-- Header de usuario -->
   <app-navbarusuariologueado></app-navbarusuariologueado>
   <div class="container-fluid d-flex flex-row">
-    <a [routerLink]="['/especialidades']">
+    <a (click)="Volver()">
       <img
         class="ms-4 caret"
         src="../../../assets/img/caret_back.png"
