--- a/frontend/agendapp/src/app/components/especialidad.detalle/especialidad.detalle.component.html
+++ b/frontend/agendapp/src/app/components/especialidad.detalle/especialidad.detalle.component.html
@@ -51,17 +51,13 @@
             <!-- fecha, hora y consulta -->
             @if(horario){
             <small class="pill">
-              {{ horario.rango }}
+              {{ med.idHorario | horarioFilter }}
             </small>
             }@else {
             <small class="pill">No disponible</small>
             }
           </div>
-        </div>
-        <div class="badge">
-          <!-- Eliminar turno -->
-          <span class="badge rounded-pill text-bg-light">x</span>
-        </div>
+        </div>       
       </div>
     </div>
     } }}
@@ -70,44 +66,5 @@
 
 <!-- Footer generico -->
 <section id="nav-footer">
-  <nav class="navbar d-flex flex-row justify-content-around py-3 fixed-bottom">
-    <ul class="d-flex flex-row justify-content-around align-items-center">
-      <li>
-        <a [routerLink]="['/home_usuario']" class="border">
-          <img
-            src="../../../assets/img/home.svg"
-            alt=""
-            class="border m-0 p-0"
-          />
-        </a>
-      </li>
-      <li>
-        <a [routerLink]="['/mis_turnos']" class="border">
-          <img
-            src="../../../assets/img/calendar.svg"
-            alt=""
-            class="border m-0 p-0"
-          />
-        </a>
-      </li>
-      <li>
-        <a [routerLink]="['/especialidades']" class="border">
-          <img
-            src="../../../assets/img/specialties.svg"
-            alt=""
-            class="border m-0 p-0"
-          />
-        </a>
-      </li>
-      <li>
-        <a [routerLink]="['/']" class="border">
-          <img
-            src="../../../assets/img/logout.svg"
-            alt="icono_salir"
-            title="Salir"
-          />
-        </a>
-      </li>
-    </ul>
-  </nav>
+  <app-footer class="fixed-bottom"></app-footer>
 </section>
