Modifique el filtro de horario en especialidad detalle.

--- a/frontend/agendapp/src/app/components/especialidad.detalle/especialidad.detalle.component.html
+++ b/frontend/agendapp/src/app/components/especialidad.detalle/especialidad.detalle.component.html
@@ -49,13 +49,7 @@
             </h5>
             <h6 class="card-title">{{ especialidad?.nombre }}</h6>
             <!-- fecha, hora y consulta -->
-            @if(horario){
-            <small class="pill">
-              {{ med.idHorario | horarioFilter }}
-            </small>
-            }@else {
-            <small class="pill">No disponible</small>
-            }
+             <small class="pill">{{med.idHorario | horarioFilter}}</small>           
           </div>
         </div>       
       </div>
